force-app/main/default/objects/Manufacturer_Invoice__c/Manufacturer_Invoice__c.object-meta.xml
<CustomObject>
    <label>Inward Declaration Invoice</label>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inward Declaration Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>