force-app/main/default/objects/Manufacturer_Invoice__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Invoice No.</label>
    <length>18</length>
    <type>Text</type>
</CustomField>