force-app/main/default/objects/Manufacturer_Invoice__c/fields/Inward_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Inward_Declaration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inward Declaration</label>
    <referenceTo>Inward_Declaration__c</referenceTo>
    <relationshipLabel>Inward Declaration Invoices</relationshipLabel>
    <relationshipName>Inward_Declaration_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>