force-app/main/default/objects/Manufacturer_Invoice__c/fields/Product_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Description__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASC Product Code Description</label>
    <referenceTo>Product_Code__c</referenceTo>
    <relationshipName>Manufacturer_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>