force-app/main/default/objects/Manufacturer_Invoice__c/fields/TN_Freight_Charges__c.field-meta.xml
<CustomField>
    <fullName>TN_Freight_Charges__c</fullName>
    <label>TN Freight Charges</label>
    <length>10</length>
    <type>Text</type>
</CustomField>