force-app/main/default/objects/Manufacturer_Invoice__c/fields/TN_Freight_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_Freight_Currency_Code__c</fullName>
    <label>TN Freight Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>