force-app/main/default/objects/Manufacturer_Invoice__c/fields/TN_Insurance_Charges__c.field-meta.xml
<CustomField>
    <fullName>TN_Insurance_Charges__c</fullName>
    <label>TN Insurance Charges</label>
    <length>10</length>
    <type>Text</type>
</CustomField>