force-app/main/default/objects/Manufacturer_Invoice__c/fields/TN_Invoice_Term_Type__c.field-meta.xml
<CustomField>
    <fullName>TN_Invoice_Term_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN Invoice Term Type</label>
    <referenceTo>Invoice_Term_Type__c</referenceTo>
    <relationshipName>Manufacturer_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>