force-app/main/default/objects/Manufacturer_Invoice__c/fields/TN_Invoice_Term_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>TN_Invoice_Term_Type_Code__c</fullName>
    <formula>TN_Invoice_Term_Type__r.Invoice_Term_Type_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TN Invoice Term Type Code</label>
    <type>Text</type>
</CustomField>