force-app/main/default/objects/Manufacturer_Invoice__c/fields/TN_Total_Dutiable_Qty__c.field-meta.xml
<CustomField>
    <fullName>TN_Total_Dutiable_Qty__c</fullName>
    <label>TN Total Dutiable Qty</label>
    <precision>15</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>