force-app/main/default/objects/Manufacturer_Invoice__c/fields/TN_Total_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>TN_Total_GST_Amount__c</fullName>
    <label>TN Total GST Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>