force-app/main/default/objects/Manufacturer_Invoice__c/fields/TN_Total_No_of_Items__c.field-meta.xml
<CustomField>
    <fullName>TN_Total_No_of_Items__c</fullName>
    <label>TN Total No. of Items</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>