force-app/main/default/objects/Manufacturer_Invoice__c/fields/TN_Total_Outer_Pack_UOM__c.field-meta.xml
<CustomField>
    <fullName>TN_Total_Outer_Pack_UOM__c</fullName>
    <defaultValue>&quot;NMB&quot;</defaultValue>
    <label>TN Total Outer Pack UOM</label>
    <length>3</length>
    <type>Text</type>
</CustomField>