force-app/main/default/objects/Manufacturer_Invoice__c/fields/Total_Invoice_Amount_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Amount_Currency_Code__c</fullName>
    <label>TN Total Invoice Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency_Code</valueSetName>
    </valueSet>
</CustomField>