force-app/main/default/objects/Manufacturer_Invoice__c/fields/Vehicle_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Shipment</label>
    <referenceTo>Vehicle_Shipment__c</referenceTo>
    <relationshipName>Manufacturer_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>