force-app/main/default/objects/Manufacturer_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Total_Invoice_Amount_Currency_Code__c</columns>
    <columns>Total_Invoice_Amount__c</columns>
    <columns>Vehicle_Shipment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>